--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Toboolist</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+
+    <header class="bk-white">
+        <img src="./img/Logo.png" alt="logo toboolist">
+        <h1>Toboolist</h1>
+    </header>
+
+    <main></main>
+
+    <footer></footer>
 </body>
 </html>
