--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
     <header class="bk-white">
-        <img src="./img/Logo.png" alt="logo toboolist">
-        <h1>Toboolist</h1>
+        <img class="vert-align" src="./img/Logo.png" alt="Logo Toboolist">
+        <h1 class="vert-align display-inblock" >Toboolist</h1>
     </header>
 
     <main></main>
