--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
+    <!-- creazione logo  -->
     <header class="bk-white">
         <img class="vert-align" src="./img/Logo.png" alt="Logo Toboolist">
         <h1 class="vert-align display-inblock" >Toboolist</h1>
     </header>
 
-    <main></main>
-
-    <footer></footer>
+    <main>
+        <!-- creazione tasti  -->
+        <div>
+            <button>Add Task</button>
+            <button>Add Section</button>
+        </div>
+    </main>
 </body>
 </html>
