created div button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main>
         <!-- creazione tasti  -->
-        <div>
+        <div class="bk-white sezione-1" >
             <button>Add Task</button>
             <button>Add Section</button>
         </div>
