added class to div and button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <!-- creazione tasti  -->
         <div class="bk-white sezione-1" >
-            <button>Add Task</button>
+            <button class="font-white bk-blu" >Add Task</button>
             <button>Add Section</button>
         </div>
     </main>
