added background colour to button

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <main>
         <!-- creazione tasti  -->
         <div class="bk-white sezione-1" >
-            <button class="font-white bk-blu" >Add Task</button>
-            <button>Add Section</button>
+            <button class="tasto font-white bk-blu" >Add Task</button>
+            <button class="tasto" >Add Section</button>
         </div>
     </main>
 </body>
