added button style

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- creazione tasti  -->
         <div class="bk-white sezione-1" >
             <button class="tasto font-white bk-blu" >Add Task</button>
-            <button class="tasto" >Add Section</button>
+            <button class="tasto font-grey bk-white" >Add Section</button>
         </div>
     </main>
 </body>
