--- a/index.html
+++ b/index.html
@@ -19,6 +19,53 @@
             <button class="tasto font-white bk-blu" >Add Task</button>
             <button class="tasto font-grey bk-white" >Add Section</button>
         </div>
+        <div class="bk-white sezione-2">
+            <ul>
+                <li>
+                    <h2>New Task</h2>
+                </li>
+                <li>
+                    Quarterly Newsletter 
+                    <span>Editorial</span>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <h2>Today</h2>
+                </li>
+                <li>
+                    Recruting blog post 
+                    <span>Editorial</span>
+                </li>
+                <li>
+                    Mobile app luaunch
+                    <span>Q1 Goals</span>
+                </li><li>
+                    Interview John H.
+                    <span>Recruting</span>
+                </li><li>
+                    Summit update to mobile storefronts
+                    <span>Mobile</span>
+            </ul>
+            <ul>
+                <li>
+                    <h2>Upcoming</h2>
+                </li>
+                <li>
+                    Schedule meeting wit alex
+                </li>
+                <li>
+                    Homepage refresh
+                    <span>Website</span>
+                </li><li>
+                    Onboard new sales team members
+                    <span>Sales</span>
+                </li><li>
+                    Review editorial calendar
+                    <span>Editorial</span>
+                </li>
+            </ul>
+        </div>
     </main>
 </body>
 </html>
