added class to spans

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <div class="bk-white sezione-2">
             <ul>
                 <li>
-                    <h2>New Task</h2>
+                    <h2 >New Task</h2>
                 </li>
                 <li>
                     Quarterly Newsletter 
-                    <span>Editorial</span>
+                    <span class="bk-blu font-white " >Editorial</span>
                 </li>
             </ul>
             <ul>
@@ -35,17 +35,17 @@
                 </li>
                 <li>
                     Recruting blog post 
-                    <span>Editorial</span>
+                    <span class="bk-blu font-white" >Editorial</span>
                 </li>
                 <li>
                     Mobile app luaunch
-                    <span>Q1 Goals</span>
+                    <span class="bk-purple font-white" >Q1 Goals</span>
                 </li><li>
                     Interview John H.
-                    <span>Recruting</span>
+                    <span class="bk-green font-white" >Recruting</span>
                 </li><li>
                     Summit update to mobile storefronts
-                    <span>Mobile</span>
+                    <span class="bk-orange font-white" >Mobile</span>
             </ul>
             <ul>
                 <li>
@@ -56,13 +56,13 @@
                 </li>
                 <li>
                     Homepage refresh
-                    <span>Website</span>
+                    <span class="bk-pink font-white" >Website</span>
                 </li><li>
                     Onboard new sales team members
-                    <span>Sales</span>
+                    <span class="bklightgreen font-white" >Sales</span>
                 </li><li>
                     Review editorial calendar
-                    <span>Editorial</span>
+                    <span class="bk-blu font-white" >Editorial</span>
                 </li>
             </ul>
         </div>
