added class to li

--- a/index.html
+++ b/index.html
@@ -21,46 +21,51 @@
         </div>
         <div class="bk-white sezione-2">
             <ul>
-                <li>
+                <li class="frecetta">
                     <h2 >New Task</h2>
                 </li>
-                <li>
+                <li class="spunta">
                     Quarterly Newsletter 
                     <span class="bk-blu font-white " >Editorial</span>
                 </li>
             </ul>
             <ul>
-                <li>
+                <li class="frecetta">
                     <h2>Today</h2>
                 </li>
-                <li>
+                <li class="spunta">
                     Recruting blog post 
                     <span class="bk-blu font-white" >Editorial</span>
                 </li>
-                <li>
+                <li class="spunta">
                     Mobile app luaunch
                     <span class="bk-purple font-white" >Q1 Goals</span>
-                </li><li>
+                </li>
+                <li>
                     Interview John H.
                     <span class="bk-green font-white" >Recruting</span>
-                </li><li>
+                </li>
+                <li class="spunta">
                     Summit update to mobile storefronts
                     <span class="bk-orange font-white" >Mobile</span>
+                </li>
             </ul>
             <ul>
-                <li>
+                <li class="frecetta" >
                     <h2>Upcoming</h2>
                 </li>
                 <li>
                     Schedule meeting wit alex
                 </li>
-                <li>
+                <li class="spunta">
                     Homepage refresh
                     <span class="bk-pink font-white" >Website</span>
-                </li><li>
+                </li>
+                <li class="spunta">
                     Onboard new sales team members
-                    <span class="bklightgreen font-white" >Sales</span>
-                </li><li>
+                    <span class="bk-lightgreen font-white" >Sales</span>
+                </li>
+                <li class="spunta">
                     Review editorial calendar
                     <span class="bk-blu font-white" >Editorial</span>
                 </li>
