added class croce

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     Mobile app luaunch
                     <span class="bk-purple font-white" >Q1 Goals</span>
                 </li>
-                <li>
+                <li class="croce" >
                     Interview John H.
                     <span class="bk-green font-white" >Recruting</span>
                 </li>
@@ -54,7 +54,7 @@
                 <li class="frecetta" >
                     <h2>Upcoming</h2>
                 </li>
-                <li>
+                <li class="croce">
                     Schedule meeting wit alex
                 </li>
                 <li class="spunta">
