--- a/index.html
+++ b/index.html
@@ -20,56 +20,60 @@
             <button class="tasto font-grey bk-white" >Add Section</button>
         </div>
         <div class="bk-white sezione-2">
+            <!-- sezione new task -->
+            <div>
+                <h2>&#9660;New Task</h2>
+                <ul>
+                    <li>
+                        &#9989;Quarterly Newsletter 
+                        <span class="bk-blu font-white " >Editorial</span>
+                    </li>
+                </ul>
+            </div>
+            <!-- sezione today  -->
+            <div>
+                <h2>&#9660;Today</h2>
+                <ul>
+                    <li>
+                        &#9989;Recruting blog post 
+                        <span class="bk-blu font-white" >Editorial</span>
+                    </li>
+                    <li>
+                        &#9989;Mobile app luaunch
+                        <span class="bk-purple font-white" >Q1 Goals</span>
+                    </li>
+                    <li>
+                        &#10060;Interview John H.
+                        <span class="bk-green font-white" >Recruting</span>
+                    </li>
+                    <li>
+                        &#9989;Summit update to mobile storefronts
+                        <span class="bk-orange font-white" >Mobile</span>
+                    </li>
+                </ul>
+                </div>
+            <!-- sezione upcoming  -->
+            <div>
+                <h2>&#9660;Upcoming</h2>
             <ul>
-                <li class="frecetta">
-                    <h2>New Task</h2>
+                <li>
+                    &#10060;Schedule meeting wit alex
                 </li>
-                <li class="spunta">
-                    Quarterly Newsletter 
-                    <span class="bk-blu font-white " >Editorial</span>
-                </li>
-            </ul>
-            <ul>
-                <li class="frecetta">
-                    <h2>Today</h2>
-                </li>
-                <li class="spunta">
-                    Recruting blog post 
-                    <span class="bk-blu font-white" >Editorial</span>
-                </li>
-                <li class="spunta">
-                    Mobile app luaunch
-                    <span class="bk-purple font-white" >Q1 Goals</span>
-                </li>
-                <li class="croce" >
-                    Interview John H.
-                    <span class="bk-green font-white" >Recruting</span>
-                </li>
-                <li class="spunta">
-                    Summit update to mobile storefronts
-                    <span class="bk-orange font-white" >Mobile</span>
-                </li>
-            </ul>
-            <ul>
-                <li class="frecetta" >
-                    <h2>Upcoming</h2>
-                </li>
-                <li class="croce">
-                    Schedule meeting wit alex
-                </li>
-                <li class="spunta">
-                    Homepage refresh
+                <li>
+                    &#9989;Homepage refresh
                     <span class="bk-pink font-white" >Website</span>
                 </li>
-                <li class="spunta">
-                    Onboard new sales team members
+                <li>
+                    &#9989;Onboard new sales team members
                     <span class="bk-lightgreen font-white" >Sales</span>
                 </li>
-                <li class="spunta">
-                    Review editorial calendar
+                <li>
+                    &#9989;Review editorial calendar
                     <span class="bk-blu font-white" >Editorial</span>
                 </li>
             </ul>
+            </div>
+            
         </div>
     </main>
 </body>
