adjusted cross and check

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div>
                 <h2>&#9660;New Task</h2>
                 <ul>
-                    <li>
-                        &#9989;Quarterly Newsletter 
+                    <li class="check">
+                        Quarterly Newsletter 
                         <span class="bk-blu font-white " >Editorial</span>
                     </li>
                 </ul>
@@ -34,20 +34,20 @@
             <div>
                 <h2>&#9660;Today</h2>
                 <ul>
-                    <li>
-                        &#9989;Recruting blog post 
+                    <li class="check">
+                        Recruting blog post 
                         <span class="bk-blu font-white" >Editorial</span>
                     </li>
-                    <li>
-                        &#9989;Mobile app luaunch
+                    <li class="check">
+                        Mobile app luaunch
                         <span class="bk-purple font-white" >Q1 Goals</span>
                     </li>
-                    <li>
-                        &#10060;Interview John H.
+                    <li class="cross">
+                        Interview John H.
                         <span class="bk-green font-white" >Recruting</span>
                     </li>
-                    <li>
-                        &#9989;Summit update to mobile storefronts
+                    <li class="check">
+                        Summit update to mobile storefronts
                         <span class="bk-orange font-white" >Mobile</span>
                     </li>
                 </ul>
@@ -56,19 +56,19 @@
             <div>
                 <h2>&#9660;Upcoming</h2>
             <ul>
-                <li>
-                    &#10060;Schedule meeting wit alex
+                <li class="cross">
+                    Schedule meeting wit alex
                 </li>
-                <li>
-                    &#9989;Homepage refresh
+                <li class="check">
+                    Homepage refresh
                     <span class="bk-pink font-white" >Website</span>
                 </li>
-                <li>
-                    &#9989;Onboard new sales team members
+                <li class="check">
+                    Onboard new sales team members
                     <span class="bk-lightgreen font-white" >Sales</span>
                 </li>
-                <li>
-                    &#9989;Review editorial calendar
+                <li class="check">
+                    Review editorial calendar
                     <span class="bk-blu font-white" >Editorial</span>
                 </li>
             </ul>
